# project_puf

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README.txt  pyproject.toml
api/: main.py
config/: Dockerfile.api  database.yaml  docker-compose.test.yml  docker-compose.yml  pipeline.yaml  sources.yaml
devlogs/: 2026-03-03_arch-advisor-review.md  2026-03-03_pipeline-architect-review.md  2026-03-03_puf-foundation-sprint_brief.md  2026-03-03_schema-smith-review.md  2026-03-03_structure-sentinel-review.md  2026-03-04_insight-engine-review.md  2026-03-04_phase1a-foundation_brief.md  2026-03-04_phase1a-foundation_retro.md  2026-03-04_phase1b-reference-data_brief.md  2026-03-04_phase1b-reference-data_retro.md  2026-03-04_phase1c-core-identity_brief.md  2026-03-04_phase1c-core-identity_retro.md  2026-03-04_phase1d-utilization-data_brief.md  2026-03-04_phase1d-utilization-data_retro.md  2026-03-04_phase1e-api-frontend_brief.md  2026-03-04_phase1e-api-frontend_retro.md  2026-03-04_phase1f-tier2-expansion_brief.md  2026-03-04_phase1f-tier2-expansion_retro.md  2026-03-04_structure-sentinel-v2-review.md  2026-03-04_ux-advocate-review.md  2026-04-01_governance-alignment_brief.md  2026-04-01_governance-alignment_retro.md  2026-04-02_antagonist-audit_report.md  2026-04-02_daily-directive_cto.md  2026-04-02_product-backlog_brief.md  README.md
flows/: cost_reports_flow.py  deploy.py  geovar_flow.py  nppes_flow.py  partb_flow.py  partd_flow.py  pos_flow.py  reference_flow.py  utilization_flow.py
frontend/: Dockerfile  package.json
models/: dbt_project.yml  profiles.yml
scripts/: export_marts_to_parquet.py  seed_catalog_sources.py
tests/: conftest.py  test_api_schemas.py  test_baselines.py  test_catalog.py  test_circuit_breaker.py  test_common_acquire.py  test_common_config.py  test_common_transform.py  test_common_validate.py  test_compute_data_year.py  test_contract_alignment.py  test_contracts.py  test_dbt_runner.py  (+16 more)
(+200 files in other folders)
